# mplot-pybind

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
development/: eigen.cc  meshgrid.cc  meshgrid.ipynb  meson.build  numpy.ipynb  testarange.cc  timing.cc
doc/: Doxyfile.in  meson.build
examples/: 3dsurface.cc  3dsurface.py  contour.cc  contour.py  meson.build  multiple.cc  multiple.py  multiplePlots.cc  multiplePlots.py  simple.cc  simple.py  subplots.cc  subplots.py
mplot++/: meson.build  mplot++.h  utilities.cc  utilities.h
