
  executable('timing', sources: ['timing.cc'],
        dependencies: [dependency('eigen3'), mplotppdep])

  executable('testarange', sources: ['testarange.cc'],
        dependencies: [mplotppdep])

  executable('eigen', sources: ['eigen.cc'],
        dependencies: [dependency('eigen3'), mplotppdep])

  executable('meshgrid', sources: ['meshgrid.cc'],
        dependencies: [dependency('eigen3'), mplotppdep])